overflow issue solved

--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,11 @@
 }
 
 @custom-variant dark (&:where(.dark, .dark *));
+
+
+/*
+* {
+  outline: 1px solid red;
+}
+
+*/
